<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FindMyFriend</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="menu_name">Name</string>
    <string name="menu_map">Map</string>
    <string name="menu_friends">Friends</string>
    <string name="menu_settings">My location</string>
    <string name="menu_about">About</string>
    <string-array name="drawer_array">
        <item>@string/menu_name</item>
        <item>@string/menu_map</item>
        <item>@string/menu_friends</item>
        <item>@string/menu_settings</item>
        <item>@string/menu_about</item>
    </string-array>
    <array name="drawer_icons">
        <item>@drawable/person</item>
        <item>@drawable/map</item>
        <item>@drawable/friends</item>
        <item>@drawable/location</item>
        <item>@drawable/about</item>
    </array>
    <string name="sharing_until">My location is sharing until</string>
    <string name="not_sharing">My location is not sharing now</string>
    <string name="share_location">Share my location</string>
    <string name="edit_time">Edit time</string>
    <string name="half_an_hour">30 minutes</string>
    <string name="one_hour">1 hour</string>
    <string name="two_hours">2 hours</string>
    <string name="five_hours">5 hours</string>
    <string name="select_time">Select time...</string>
    <string-array name="dialog_array">
        <item>@string/half_an_hour</item>
        <item>@string/one_hour</item>
        <item>@string/two_hours</item>
        <item>@string/five_hours</item>
        <item>@string/select_time</item>
    </string-array>
    <string name="incorrect_time">Incorrect time</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_positive_button">Set</string>
    <string name="dialog_negative_button">Cancel</string>
    <string name="date_picker_title">Set date</string>
    <string name="time_picker_title">Set time</string>
    <string name="friends_online">Online</string>
    <string name="friends_offline">Offline</string>
    <string name="version">Version</string>
    <string name="developers">Write to developers:</string>
    <string name="mailto_avgarder"><a href="mailto:avgarder@gmail.com">Anton Garder</a></string>
    <string name="mailto_darkraven8"><a href="mailto:darkraven8@gmail.com">Vladimir Baev</a></string>
</resources>
