<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:paddingBottom="5dp"
            android:paddingTop="20dp"
            android:src="@drawable/launcher" />

        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/app_name"
            android:textSize="17dp" />

        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/version"
            android:textSize="17dp" />

        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/developers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/developers"
            android:textSize="17dp" />

        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/mailto_avgarder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/mailto_avgarder"
            android:textSize="17dp" />

        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/mailto_darkraven8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/mailto_darkraven8"
            android:textSize="17dp" />

    </LinearLayout>
</ScrollView>